--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <div class="bgImage"></div>
     <div class="container">
-      <img src="/images/illustration-hero.svg" alt="" />
+      <img src="./images/illustration-hero.svg" alt="" />
       <h1>Order Summary</h1>
 
       <p>
