--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </p>
       <div class="subscription">
         <div class="subImg">
-          <img src="/images/icon-music.svg" alt="">
+          <img src="./images/icon-music.svg" alt="">
         </div>
         <div class="subText">
           <strong>Annual Plan </strong> <br>
